autometrics-macros/tests/error_labels/fail/wrong_attribute.stderr
error: Only `label(result = "RES")` (RES can be "ok" or "error") is supported
 --> tests/error_labels/fail/wrong_attribute.rs:8:7
  |
8 |     #[label]
  |       ^^^^^
